sandbox/output
StringCalculator.java:9: error: ';' expected
        retrun addArray(res);
                       ^
StringCalculator.java:9: error: not a statement
        retrun addArray(res);
                        ^
StringCalculator.java:9: error: ';' expected
        retrun addArray(res);
                           ^
3 errors
